examples/k8stest/conf/GRPCRoute/Basic/Service_test-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-grpc
  namespace: edgion-test
spec:
  selector:
    app: edgion-test-server
  ports:
    - name: grpc-30021
      port: 30021
      protocol: TCP
      targetPort: 30021
  type: ClusterIP
