examples/k8stest/conf/GRPCRoute/Basic/Gateway.yaml
# gRPC  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grpc-test-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: grpc
      protocol: HTTP
      port: 31050
